package nz.ac.vuw.ecs.swen225.gp20.maze;


/**
 * Enumerated egocentric coordinates.
 *
 * @author Arie Bates-Hermans, 300288455.
 */
public enum Direction {
  UP,
  DOWN,
  LEFT,
  RIGHT,
}
