package nz.ac.vuw.ecs.swen225.gp20.maze;

public interface Item {

  char getSymbol();
}
