package nz.ac.vuw.ecs.swen225.gp20.render;

public class RenderHint {

}
